feat: initialize BanForge with CI/CD pipeline and linting configuration

--- a/.gitea/workflows/CI.yml
+++ b/.gitea/workflows/CI.yml
@@ -20,8 +20,11 @@ jobs:
           cache: false
       - name: Install deps
         run: go mod tidy
-      - name: Run linter
-        run: golangci-lint run ./...
+      - name: Golangci-lint
+        uses: golangci/golangci-lint-action@v9.2.0
+        with:
+          args: --timeout=5m
+          skip-cache: true
       - name: Run tests
         run: go test ./...
       - name: Build
