chore: Add upload artifacts

--- a/.gitea/workflows/CD.yml
+++ b/.gitea/workflows/CD.yml
@@ -66,17 +66,8 @@ jobs:
           GOARCH: ${{ matrix.arch }}
         run: go build -o banforge-${{ matrix.goos }}-${{ matrix.arch }} ./cmd/banforge
 
-      - name: Upload to release
-        env:
-          TOKEN: ${{ secrets.TOKEN }}
-        run: |
-          TAG="${{ gitea.ref_name }}"
-          REPO="${{ gitea.repository }}"
-          SERVER="${{ gitea.server_url }}"
-          
-          curl -X POST \
-            -H "Authorization: token $TOKEN" \
-            -H "Content-Type: application/octet-stream" \
-            --data-binary "@banforge-${{ matrix.goos }}-${{ matrix.arch }}" \
-            "$SERVER/api/v1/repos/$REPO/releases/tags/$TAG/assets?name=banforge-${{ matrix.goos }}-${{ matrix.arch }}"
-
+      - name: Upload ${{ matrix.goos }}-${{ matrix.arch }}
+        uses: actions@upload-artifact@v3
+        with:
+          name: banforge-${{ matrix.goos }}-${{ matrix.arch }}
+          path: banforge-${{ matrix.goos }}-${{ matrix.arch }}
