--- a/.gitea/workflows/CD.yml
+++ b/.gitea/workflows/CD.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - name: Install Gpg
         run: apt-get update && apt-get install -y gnupg curl
+
+      - name: Import GPG key
+        if: secrets.GPG_PRIVATE_KEY != null
+        run: |
+          echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
+          echo "${{ secrets.GPG_FINGERPRINT }}" | gpg --import-ownertrust
       - name: Install syft
         run: curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
       - name: Checkout
