--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,7 @@ project_name: BanForge
 gitea_urls:
   api: https://gitea.d3m0k1d.ru/api/v1
   download: https://gitea.d3m0k1d.ru/d3m0k1d/BanForge/releases/download
+  skip_tls_verify: false
 
 
 builds:
